objects/APTS_Configurator_Champion__c.object
<CustomObject>
    <fields>
        <fullName>APTS_Access_Level__c</fullName>
        <label>Access Level</label>
        <picklist>
            <picklistValues>
                <fullName>Read Only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Read/Write</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>APTS_Configurator_Admin__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Configurator Admin</label>
        <referenceTo>APTS_Configurator_Admin__c</referenceTo>
        <relationshipLabel>Configurator Champions</relationshipLabel>
        <relationshipName>Configurator_Champions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>APTS_Configurator_Champion_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Configurator Champion User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Configurator_Champions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>APTS_External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Configurator Champion</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>APTS_Configurator_Admin__c</columns>
        <columns>APTS_Configurator_Champion_User__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CCH-{0000000000}</displayFormat>
        <label>Configurator Champion Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Configurator Champions</pluralLabel>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>APTS_Cannot_change_permission</fullName>
        <active>true</active>
        <description>Validation rule to not allow the champion to change their own permissions.</description>
        <errorConditionFormula>APTS_Configurator_Champion_User__c  =  OwnerId</errorConditionFormula>
        <errorDisplayField>APTS_Configurator_Champion_User__c</errorDisplayField>
        <errorMessage>The champion user assigned cannot be the same owner of the record.</errorMessage>
    </validationRules>
</CustomObject>